# tas_lcalcul

./: dune-project  lcalcul_interpreter.opam
lib/: ast.ml  dune  eval.ml  lexer.mll  parser.mly  type.ml
rapport/: rapport.typ
test/: dune  eval2.ml  eval4.ml  eval5.ml  eval_tests.ml  type3.ml  type4.ml  type5.ml
test/lib/: dune  shared.ml
test/prog/: fact.lmbd  hd.lmbd  ife.lmbd  ifz.lmbd  list_1.lmbd  regions.lmbd  tl.lmbd  two_args.lmbd
