(test
  (name eval2)
  (libraries alcotest lcalcul_interpreter.shared))

(test
  (name type3)
  (libraries alcotest lcalcul_interpreter.shared))

(test
  (name eval4)
  (libraries alcotest lcalcul_interpreter.shared))

(test
  (name type4)
  (libraries alcotest lcalcul_interpreter.shared))

(test
  (name eval5)
  (libraries alcotest lcalcul_interpreter.shared))
